flex 0 to prevent weird content vertical alignment

--- a/src/block/countdown/editor.scss
+++ b/src/block/countdown/editor.scss
@@ -8,3 +8,6 @@
 	}
 }
 
+.stk-block-countdown__container {
+	flex: 0;
+}
